rough working demo

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,16 @@
-hello world
+<html>
+<head></head>
+<body>
+<script src="public/script/jquery.min.js"></script>
+<script src="public/script/bluebird.min.js"></script>
+<script src="public/script/common.js"></script>
+
+
 <br>
-<a href="/public/interface.html">interface</a>
+<a href="/public/overview.html">demo</a>
+
+</body>
+</html>
+
+
+
