--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <title>Story Artifacts UI</title>
 
-	<!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
     <!-- Optional theme -->
@@ -19,7 +19,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	
+    
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
@@ -29,13 +29,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	
+    
    <!-- Project CSS -->
    <link rel="stylesheet" href="./css/style.css">
 
    <script src="public/script/jquery.min.js"></script>
    <script src="public/script/bluebird.min.js"></script>
    <script src="public/script/common.js"></script>
+
   </head>
 
   <body>
@@ -53,7 +54,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Home</a></li>
+            <li class="active"><a href="/index.html">Home</a></li>
             <li ><a href="./demo-overview.html">Demo</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -62,13 +63,13 @@
     </nav>
 
     <div class="container">
-      <h1>Story Artifacts</h1>
-      <p class="lead">Bringing your stories to the people who need to hear them.</p>
+      <h1>Artifact</h1>
+      <p class="lead">telling your story as it happens</p>
       <div class="col-md-4">
         Our team came together at the Kitchener-Waterloo PCH Hardware Hackathon around a vision of helping people share memories and experiences using collectively-created storytelling objects.
       </div>
       <div class="col-md-8">
-        <img class="img-responsive" src="./images/finding-user-stories.jpg"/>
+        <img class="img-responsive" src="/public/images/finding-user-stories.jpg"/>
       </div>
      <a href="/public/overview.html">demo</a>
     </div><!-- /.container -->
