Reworded paths for github pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <BASE href="/public/">
-    <!-- local testing base    <BASE href="file:///C:/Users/Tessa/Documents/Repositories/story-artifact-ui/public/">-->
+    <!-- local testing base    <BASE href="/public/"> -->
+    <BASE href="file:///C:/Users/Tessa/Documents/Repositories/story-artifact-ui/public/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
