Adds use case video

--- a/hardware-hack.html
+++ b/hardware-hack.html
@@ -76,12 +76,16 @@ $(window).scroll(function(e){
     </nav>
     <div class="container">
       <!-- Video -->
-      <div class="row">
-         <div class="col-md-10 .col-md-offset-1">
-            <h3 class="amaranth">A video showing how we imagine our users and customers using Artifact</h3>
-         </div>
+      <div class="row top-buffer">
+        <div class="col-lg-8 .col-md-offset-1">
+          <iframe src="https://drive.google.com/file/d/0BwwDNAAScRqwNEJQNVhLcGhPZVU/preview" height="360" width="640"></iframe>
+        </div>
+        <div class="col-lg-2 text-col">
+          <h3 class="amaranth">Use Case Video</h3>
+          <p class="lead amaranth">We imagine a patient interacting with Artifact in a crowded waiting room</h3>
+        </div>
       </div>
-      <!-- Video -->
+      <!-- Photos -->
       <div class="row top-buffer">
          <div class="col-md-10 .col-md-offset-1 text-col">
            <h3 class="amaranth">Weekend Hack</h3>
